# patrimonio-ia

./: README.md  firebase.json  pubspec.yaml
.github/workflows/: android.yml
android/app/: build.gradle.kts  google-services.json
android/app/src/main/cpp/: CMakeLists.txt  edge_impulse_jni.cpp
android/app/src/main/cpp/edge_impulse/: README.txt
android/app/src/main/cpp/edge_impulse/model-parameters/: model_metadata.h  model_variables.h
android/app/src/main/cpp/edge_impulse/tflite-model/: tflite_learn_722400_3.h
assets/model/: model.tflite
assets/models/: arquitetura_5elementos.tflite  casas_coloniais.tflite  janelas_heritage.tflite  portas.tflite  test_model.py  teste2.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: firebase_options.dart  main.dart  mainAndroid.dart  main_android.dart
lib/database/: db_helper.dart
lib/models/: artigo_model.dart  classificacao_model.dart  detection_model.dart  user_model.dart
lib/screens/: about_screen.dart  camera_screen.dart  detalhe_classificacao_screen.dart  duvidas_screen.dart  history_screen.dart  home_screen.dart  login_screen.dart  map_screen.dart  register_screen.dart  settings_screen.dart
lib/services/: auth_service.dart  conditional_google_sign_in.dart  conditional_google_sign_in_stub.dart  history_service.dart  local_auth_service.dart  model_registry.dart  session_service.dart
lib/widgets/: artigo_card.dart  artigo_resumo_modal.dart  map_bottom_sheet.dart
linux/: CMakeLists.txt
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+28 files in other folders)
